Add packages, add play sound from assets function, add play sound button, add metronome sound asset

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  just_audio: ^0.9.5
+  audioplayers: ^0.19.1
+  flutter_hooks: ^0.18.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/Metronome2.wav
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
