--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,11 @@ flutter:
     - family: Metropolis
       fonts:
         - asset: assets/fonts/Metropolis-Bold.otf
+          weight: 700
+        - asset: assets/fonts/Metropolis-Regular.otf
+          weight: 400
+        - asset: assets/fonts/Metropolis-Light.otf
+          weight: 200
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-SemiBold.ttf
