WIP metronome audio engine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,5 +7,12 @@
             "request": "launch",
             "program": "lib/main.dart",
           },
+          {
+            "name": "Flutter release",
+            "type": "dart",
+            "flutterMode": "release",
+            "request": "launch",
+            "program": "lib/main.dart",
+          },
     ]
 }
